--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -12,3 +12,14 @@ th,td {
     margin: 0px 0px;
     padding: 5px 5px;
 }
+.invalid {
+  border: 4px solid red;
+}
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+input[type=number] {
+  -moz-appearance: textfield;
+}
