--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -15,6 +15,9 @@ th,td {
 .invalid {
   border: 4px solid red;
 }
+.hidden {
+  visibility: hidden;
+}
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
   -webkit-appearance: none;
