--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -13,6 +13,9 @@ body {
   button {
     cursor: pointer;
   }
+  input:focus {
+    outline: none;
+  }
   .app__wrapper {
     padding-left: calc(100vw - 100%);
   }
@@ -20,6 +23,7 @@ body {
     background: $Tertiary;
     margin: 0;
     padding: .5rem;
+    margin-bottom: 50px;
     color: $Quaternary;
     .logOutButton {
       float: right;
@@ -37,20 +41,29 @@ body {
   
   .trackerContainer {
     display: flex;
-    background: pink;
+    .errorText {
+      font-size: 20px;
+      font-weight: bold;
+      text-align: center;
+    }
     .invoiceTable {
+      background: $Secondary;
+      width: 50%;
       margin-left: 50px;
       font-size: 15px;
       border-collapse: collapse;
+      text-align: center;
       th,td {
         border-spacing: 0px;
         border-collapse: collapse;
         border: 1px solid black;
         margin: 0px 0px;
         padding: 10px 10px;
+        min-width: 40px;
       }
       .tableButtonContainer{
         cursor: pointer;
+        font-weight: bold;
         background: lightgray;
         -webkit-user-select: none;
         -ms-user-select: none;
@@ -61,9 +74,63 @@ body {
       }
       
     }
-    .contentForm {
-      width: 500px;
+    .confirmBox {
+      position: fixed;
+      width: 100%;
+      height: 100%;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background-color: rgba(0,0,0,0.5);
+      .confirmContent {
+        padding: 50px;
+        font-size: 32px;
+        font-weight: 500;
+        text-align: center;
+        position: absolute;
+        width: 600px;
+        height: 300px;
+        background: $Tertiary;
+        left: 50%;
+        top: 50%;
+        -ms-transform: translate(-50%, -50%);
+        transform: translate(-50%, -50%);
+        .confirmButton {
+          font-size: 32px;
+          width: 200px;
+          height: 100px;
+          margin-left: 50px;
+          margin-right: 50px;
+          margin-top: 125px;
+          border: none;
+        }
+        .deleteButton{
+          background: #eb0927;
+        }
+        .deleteButton:hover {
+          background: #a60c20;
+        }
+      }
     }
+    .contentFormContainer{
+      width: 500px;
+      float: right;
+      .contentForm {
+        text-align: center;
+        font-size: 20px;
+        width: 18rem;
+        height: 30px;
+        margin-left: auto;
+        margin-right: auto;
+        border: none;
+        background-clip: content-box;
+        .contentField {
+          text-indent: 1px; 
+        }
+      }
+    }
+    
   }
   .formContainer {
     position: relative;
