--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -13,6 +13,10 @@ body {
   button {
     cursor: pointer;
   }
+  .errorText {
+    font-weight: bold;
+    color: #a60c20;
+  }
   input:focus {
     outline: none;
   }
@@ -127,6 +131,24 @@ body {
         background-clip: content-box;
         .contentField {
           text-indent: 1px; 
+        }
+        .formButton {
+          border: none;
+          background: $Secondary;
+          font-size: 15px;
+          margin-top: 10px;
+          padding: 5px;
+          font-weight: bold;
+        }
+        .formButton:hover {
+          background: $Tertiary;
+        }
+        .cancelButton {
+          background: #eb0927;
+          margin-right: 15px;
+        }
+        .cancelButton:hover {
+          background: #a60c20;
         }
       }
     }
